--- a/vcweb/core/templates/base-vcweb-form.html
+++ b/vcweb/core/templates/base-vcweb-form.html
@@ -6,7 +6,7 @@
 {% endblock head %}
 
 {% block page %}
-<form id='vcweb-form' action='' method='post'>
+<form id='vcweb-form' action='' method='post' class='form-horizontal'>
 {% csrf_token %}
 {% block form %}
 
