switching css classes for alerts to use bootstrap

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -1,8 +1,8 @@
 {% extends "lighterprints/base.html" %}
 {% block content %}
-<p>
+<div class='alert-message alert'>
 Welcome to the Lighter Footprints Challenge!  Your available activities are listed below.
-</p>
+</div>
 
 <ul>
     {% for activity in activities %}
