--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -1,5 +1,5 @@
 {% extends "lighterprints/base.html" %}
-{% block content %}
+{% block page %}
 <div class='alert-message alert'>
 Welcome to the Lighter Footprints Challenge!  Your available activities are listed below.
 </div>
@@ -11,4 +11,4 @@ Welcome to the Lighter Footprints Challenge!  Your available activities are list
     <li>No more available activities, please check back again tomorrow.</li>
     {% endfor %}
 </ul>
-{% endblock content %}
+{% endblock page %}
