--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -1,9 +1,13 @@
 {% extends "lighterprints/base.html" %}
 {% block page %}
 <div class='alert-message alert'>
-Welcome to the Lighter Footprints Challenge!  Your available activities are listed below.
+Welcome to the Lighter Footprints Challenge!  <a href='https://vcweb.asu.edu/lightfoot'>Click here</a> to use our app (you'll need to use the latest version of <a
+    class='external' href='http://www.google.com/chrome'>Google Chrome</a>, <a class='external' href='http://www.apple.com/safari'>Safari</a>, or a smartphone browser).
 </div>
 
+<div class='alert-info alert'>
+    Available activities for <b>{{ request.user.participant }}</b>:
+</div>
 <ul>
     {% for activity in activities %}
     <li>{{ activity }}</li>
