--- a/vcweb/core/templates/includes/experimenter-nav-menu.html
+++ b/vcweb/core/templates/includes/experimenter-nav-menu.html
@@ -6,14 +6,19 @@
 {% url core:logout as logout %}
 {% url core:profile as profile %}
 
-<div id='menu'>
-<ul>
-	<li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
-	<li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
-        {% if "experiment" in request.path %}
-        <li class='{% active_re request "experiment" %}'><a name='experiment'>Experiment</a></li>
-        {% endif %}
-	<li class='{% active request profile %}'><a href='{{ profile }}'>Profile</a></li>
-	<li><a href='{{ logout }}'>Logout</a></li>
-</ul>
+<div class='navbar'>
+    <div class='navbar-inner'>
+        <div class='container'>
+            <ul class='nav'>
+                <li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
+                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
+                {% if "experiment" in request.path %}
+                <li class='{% active_re request "experiment" %}'><a name='experiment'>Experiment</a></li>
+                {% endif %}
+                <li class='{% active request profile %}'><a href='{{ profile }}'>Profile</a></li>
+                <li><a href='{{ logout }}'>Logout</a></li>
+            </ul>
+
+        </div>
+    </div>
 </div>
