fixing navbar a bit more and adding line-height to div.entry

--- a/vcweb/core/templates/includes/experimenter-nav-menu.html
+++ b/vcweb/core/templates/includes/experimenter-nav-menu.html
@@ -15,7 +15,7 @@
                 {% if "experiment" in request.path %}
                 <li class='{% active_re request "experiment" %}'><a name='experiment'>Experiment</a></li>
                 {% endif %}
-                <li class='{% active request profile %}'><a href='{{ profile }}'>Profile</a></li>
+                <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a Bug</a></li>
                 <li><a href='{{ logout }}'>Logout</a></li>
             </ul>
 
