--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -23,13 +23,12 @@
                 not be preserved.</b> Once we reach a public beta we will ensure that your data is maintained and migrated.
         </div>
         <div class='entry'>
-            <p>
             Current development is focused on the <a class='external' href='http://vcweb.asu.edu/devfoot'>Lighter Footprints</a> HTML 5 mobile application 
             (also usable in the latest builds of <a class='external' href='http://www.google.com/chrome'>Chrome</a> and <a class='external' href='http://www.apple.com/safari'>Safari</a>).
             We are also planning to convert our <a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a>
             into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.
-            <br><br>
-            You can find up-to-date development news at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb'>our BitBucket repository</a>.
+            Up-to-date development news and an issue tracker are available at <a class='external'
+                href='https://bitbucket.org/virtualcommons/vcweb'>our BitBucket repository</a>.
             </p>
         </div>
         <h2 class='title'>Acknowledgements</h2>
