modifying base templates to use bootstrap navbar

--- a/vcweb/core/templates/includes/experimenter-nav-menu.html
+++ b/vcweb/core/templates/includes/experimenter-nav-menu.html
@@ -10,6 +10,7 @@
     <div class='navbar-inner'>
         <div class='container'>
             <ul class='nav'>
+                {% block header_links %}
                 <li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
                 <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
                 {% if "experiment" in request.path %}
@@ -17,6 +18,7 @@
                 {% endif %}
                 <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a Bug</a></li>
                 <li><a href='{{ logout }}'>Logout</a></li>
+                {% endblock %}
             </ul>
 
         </div>
