--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -1,3 +1,15 @@
+{% load tags %}
+{% load url from future %}
+
+{% url 'home' as home %}
+{% url 'about' as about %}
+{% url 'contact' as contact %}
+{% url 'core:login' as login %}
+{% url 'core:logout' as logout %}
+{% url 'core:register' as register %}
+{% url 'core:profile' as profile %}
+{% url 'core:dashboard' as dashboard %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -36,7 +48,31 @@
     <body>
         <div id='header'>
             {% block header %}
-            {% include "includes/nav-menu.html" %}
+            <div class='navbar navbar-fixed-top'>
+                <div class='navbar-inner'>
+                    <div class='container'>
+                        <ul class='nav'>
+                            {% block headerlinks %}
+                            <li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
+                            <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
+                            <li class='{% active request contact %}'><a href='{{ contact }}'>Contact us</a></li>
+                            <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a Bug</a></li>
+                            {% if request.user.is_authenticated %}
+                            <li class='{% active request logout %}'><a href='{{ logout }}'>Logout</a></li>
+                            {% else %}
+                            <li class='{% active request login %} {% active request register %}'>
+                            {% if debug_mode %}
+                            <a href='{{ login }}'>Login/Register</a>
+                            {% else %}
+                            <a href='https://{{request.get_host}}{{ login }}'>Login/Register</a>
+                            {% endif %}
+                            </li>
+                            {% endif %}
+                            {% endblock %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
             {% endblock %}
         </div>
         <div id='logo'>
