--- a/vcweb/core/templates/includes/nav-menu.html
+++ b/vcweb/core/templates/includes/nav-menu.html
@@ -14,6 +14,7 @@
     <div class='navbar-inner'>
         <div class='container'>
             <ul class='nav'>
+                {% block headerlinks %}
                 <li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
                 <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
                 <li class='{% active request contact %}'><a href='{{ contact }}'>Contact us</a></li>
@@ -29,8 +30,8 @@
                 {% endif %}
                 </li>
                 {% endif %}
+                {% endblock %}
             </ul>
-
         </div>
     </div>
 </div>
