fixing participation links

--- a/vcweb/core/templates/experimenter/base.html
+++ b/vcweb/core/templates/experimenter/base.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+{% load tags %}
+{% url home as home %}
+{% url core:dashboard as dashboard %}
+{% url core:login as login %}
+{% url core:logout as logout %}
+{% url core:profile as profile %}
 {% block head %}
 {{ block.super}}
 <script type='text/javascript'>
@@ -16,4 +22,12 @@
 {% include "includes/jquery.confirm.html" %}
 {% endblock %}
 {% block title %}Virtual Commons Web Experimenter Interface{% endblock %}
-{% block header %}{% include "includes/experimenter-nav-menu.html" %}{% endblock %}
+{% block headerlinks %}
+<li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
+<li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
+{% if "experiment" in request.path %}
+<li class='{% active_re request "experiment" %}'><a name='experiment'>Experiment</a></li>
+{% endif %}
+<li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a Bug</a></li>
+<li><a href='{{ logout }}'>Logout</a></li>
+{% endblock %}
