--- a/vcweb/lighterprints/templates/lighterprints/base.html
+++ b/vcweb/lighterprints/templates/lighterprints/base.html
@@ -1,19 +1,14 @@
 {% extends "base.html" %}
 {% load tags %}
-{% block head %}
-{{ block.super }}
-<script type="text/javascript">
-    $(function() {
-    });
-</script>
-{% endblock %}
+{% load url from future %}
 {% block title %}
 The Lighter Footprints Challenge
 {% endblock %}
 {% block headerlinks %}
 <li class='{% active request home %}'><a href='{{ home }}' class='first'>Home</a></li>
 <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
-<li class='{% active_re request about %}'><a href='/lighterprints/about'>About</a></li>
+<li class='{% active_re request about %}'><a href="{% url 'lighterprints:about' %}">About</a></li>
+<li class='{% active_re request participate %}'><a href='{{ participate }}'>Participate</a></li>
 <li><a href='https://vcweb.asu.edu/lightfoot'>App</a></li>
 <li><a href='/lighterprints/greenbutton/upload'>Submit Green Button Data</a></li>
 {% endblock %}
