--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -18,7 +18,7 @@
             common resources. 
         </div>
         <h2 class='title'>Current development</h2>
-        <div class='alert alertIcon'>
+        <div class='alert alert-error alertIcon'>
             This application is still under active development and in its alpha stage.  This means that <b>any data you create on this website might
                 not be preserved.</b> Once we reach a public beta we will ensure that your data is maintained and migrated.
         </div>
