starting switch to tornadio2 / socket.io v0.8+

--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -39,8 +39,8 @@ Please wait, the facilitator will start the next round when every participant is
     You are <span style='padding: 3px;' class='ui-state-highlight'>Participant #{{participant_group_relationship.participant_number}} ({{participant_experiment_relationship.pk}}, {{participant_experiment_relationship.sequential_participant_identifier}})</span> in 
     <span style='padding: 3px;' class='ui-state-highlight'>{{participant_group_relationship.group}}</span>
 </div>
-<div class='ui-state-highlight ui-corner-all'>
-    <small><span class='float-left vcweb-ui-icon ui-icon ui-icon-circle-arrow-w'></span><a href='participate'>return to participation page</a></small>
+<div class='alert alert-message'>
+    <small><span class='icon-left vcweb-ui-icon ui-icon ui-icon-circle-arrow-w'></span><a href='participate'>return to participation page</a></small>
 </div>
 <h3>Participant History</h3>
 <div id='group-history'>
