--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -122,8 +122,7 @@
             <a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>
             </p>
             <p class='legal'>
-            Copyright (c) {% now "Y" %} Arizona Board of Regents.  Design adapted from <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.<br/>
-            This project is funded by the <a href='http://nsf.gov'>National Science Foundation</a> and <a href='http://www.asu.edu'>Arizona State University</a>.
+            Copyright (c) {% now "Y" %} Arizona Board of Regents.  <br/>
             <br />
             </p>
             {% endblock footer %}
