--- a/vcweb/core/templates/experimenter/base.html
+++ b/vcweb/core/templates/experimenter/base.html
@@ -29,5 +29,5 @@
 <li class='{% active_re request "experiment" %}'><a name='experiment'>Experiment</a></li>
 {% endif %}
 <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a Bug</a></li>
-<li><a href='{{ logout }}'>Logout</a></li>
+<li><a href='{{ logout }}'>Logout ({{request.user.experimenter.email}})</a></li>
 {% endblock %}
