--- a/vcweb/core/templates/participant/base.html
+++ b/vcweb/core/templates/participant/base.html
@@ -12,7 +12,7 @@
     <script type='text/javascript' src='{{STATIC_URL}}js/jquery.validate.min.js'></script>
     {% block participant_socket_io %}
     {% include "includes/participant.events.html" %}
-    {% include "includes/socket.io.html" %}
+    {% include "includes/sockjs.html" %}
     <script type='text/javascript'>
         var qtipOptions = {position: { corner: {target: 'topMiddle', tooltip: 'bottomMiddle'}}, style: { name: 'green', tip: 'bottomMiddle'} };
         $(function() {
