--- a/vcweb/core/templates/participant/base.html
+++ b/vcweb/core/templates/participant/base.html
@@ -16,7 +16,7 @@
     <script type='text/javascript'>
         var qtipOptions = {position: { corner: {target: 'topMiddle', tooltip: 'bottomMiddle'}}, style: { name: 'green', tip: 'bottomMiddle'} };
         $(function() {
-            connect('participant/{{participant_experiment_relationship.pk}}');
+            connect('sockjs');
             $('[title]').qtip(qtipOptions);
         });
     </script>
